# 7colors

./: .gitignore  7colors.c  CMakeLists.txt  Makefile  README.md  main  rapport.tex  tournoi.sh
rapport/src/: rapport example.aux  rapport.aux  rapport.tex
src/: LinkedList.h  board.c  board.h  ia.c  ia.h  main.c  parameters.h  player.h
